# context-cutter

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ai-e2e.yml  benchmarks.yml  release.yml  tests.yml
docs/: deployment.md
examples/: claude-desktop.md  cursor-mcp.json  langchain_mcp.md  openai-agents-sdk.py  opencode.md  vscode-copilot-mcp.json
npm/context-cutter-mcp/: README.md  install.js  package.json  run.js
python/context_cutter/: __init__.py  _lib.pyi  core.py  interceptor.py  mcp_server.py  opencode.py  query.py  schemas.py  store.py  teaser.py  tools.py  wrapper.py
src/: engine.rs  error.rs  lib.rs  parser.rs  store.rs
tests/: ai_harness.py  test_ai_e2e_live.py  test_ai_e2e_offline.py  test_benchmarks.py  test_e2e_contracts.py  test_engine.py  test_mcp_server.py  test_opencode.py  test_query.py  test_schemas.py  test_store.py  test_teaser.py  test_tools.py  test_ux.py
tests/fixtures/evals/: github_contributors.json  mixed_scalar_and_arrays.json  nested_metrics.json
