[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "context-cutter"
version = "0.1.0"
description = "LLM tool-calling utility that solves JSON Bloat"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pydantic>=2.0"]

[tool.maturin]
python-source = "python"
module-name = "context_cutter._lib"
