[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "context-cutter"
version = "0.1.0"
description = "LLM tool-calling utility that solves JSON Bloat"
requires-python = ">=3.9"
dependencies = ["pydantic>=2.0", "jsonpath-ng>=1.6"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-benchmark>=4.0", "pytest-cov>=5.0", "ruff>=0.11", "black>=25.0"]
redis = ["redis>=5.0"]

[tool.maturin]
python-source = "python"
module-name = "context_cutter._lib"
features = ["python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
	"benchmark: performance benchmark tests",
	"ai_e2e_offline: deterministic, provider-agnostic AI-integrated end-to-end tests",
	"ai_e2e_live: optional live provider smoke tests requiring network and API keys",
]
